--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "knex": "^3.1.0",
     "log4js": "^6.9.1",
     "mongoose": "^8.2.0",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "pg": "^8.11.3",
     "puppeteer": "^22.3.0",
@@ -44,6 +45,7 @@
     "@types/express-fileupload": "^1.4.4",
     "@types/knex": "^0.16.1",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.11.24",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.11.2",
