--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "node-cron": "^3.0.3",
     "pg": "^8.11.3",
     "puppeteer": "^22.3.0",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vm": "^0.1.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.5",
