--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "pg": "^8.11.3",
+    "playwright": "^1.42.1",
     "puppeteer": "^22.3.0",
     "uuid": "^9.0.1",
     "vm": "^0.1.0"
